--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-spinner-component": "^1.0.5",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
